# BytesIOEx

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  mkdocs.yml  pyproject.toml  setup.cfg  test.py  tox.ini
.github/workflows/: ci.yml
bytesioex/: __init__.py  bytesioex.py
docs/: bytesioex.rst  conf.py  index.md  index.rst  modules.rst  reference.md
tests/: test_bytesioex.py
