[metadata]
name = bytesioex
version = 0.0.2
author = demberto
author_email = demberto@protonmail.com
description = A simple wrapper over io.BytesIO which allows reading and writing data types directly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/BytesIOEx
project_urls =
    Bug Tracker = https://github.com/demberto/BytesIOEx/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
package_dir =
    = bytesioex
packages = find:
python_requires = >=3.6

[options.packages.find]
where = bytesioex