[metadata]
name = bytesioex
version = file: VERSION
description = A simple wrapper over io.BytesIO which allows reading and writing C data types
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/BytesIOEx
author = demberto
author_email = demberto@protonmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/demberto/BytesIOEx/issues

[options]
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
exclude = tests
